force-app/main/default/objects/Mapping_Configuration__c/Mapping_Configuration__c.object-meta.xml
<CustomObject>
    <label>Mapping Configuration</label>
    <nameField>
        <label>FdTemplateId</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapping Configurations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>