force-app/main/default/objects/Mapping_Configuration__c/fields/Approval_Node2__c.field-meta.xml
<CustomField>
    <fullName>Approval_Node2__c</fullName>
    <label>审批节点2</label>
    <length>225</length>
    <type>Text</type>
</CustomField>