force-app/main/default/objects/Mapping_Configuration__c/fields/Map_Name__c.field-meta.xml
<CustomField>
    <fullName>Map_Name__c</fullName>
    <label>配置名称</label>
    <length>225</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>