force-app/main/default/objects/Mapping_Configuration__c/fields/OA_Department_Name__c.field-meta.xml
<CustomField>
    <fullName>OA_Department_Name__c</fullName>
    <label>OA部门名称</label>
    <length>225</length>
    <type>Text</type>
</CustomField>