force-app/main/default/objects/Mapping_Configuration__c/fields/OA_Description__c.field-meta.xml
<CustomField>
    <fullName>OA_Description__c</fullName>
    <label>OA简述说明</label>
    <length>225</length>
    <type>Text</type>
</CustomField>