force-app/main/default/objects/Mapping_Configuration__c/fields/OA_Email__c.field-meta.xml
<CustomField>
    <fullName>OA_Email__c</fullName>
    <label>OA邮箱</label>
    <length>225</length>
    <type>Text</type>
</CustomField>