force-app/main/default/objects/Mapping_Configuration__c/fields/OA_Exhibition_Nmae__c.field-meta.xml
<CustomField>
    <fullName>OA_Exhibition_Nmae__c</fullName>
    <label>OA展会名称</label>
    <length>225</length>
    <type>Text</type>
</CustomField>