force-app/main/default/objects/Mapping_Configuration__c/fields/OA_Interactive__c.field-meta.xml
<CustomField>
    <fullName>OA_Interactive__c</fullName>
    <label>OA交互物</label>
    <length>225</length>
    <type>Text</type>
</CustomField>