force-app/main/default/objects/Mapping_Configuration__c/fields/OA_Internal_Name__c.field-meta.xml
<CustomField>
    <fullName>OA_Internal_Name__c</fullName>
    <label>OA员工姓名</label>
    <length>225</length>
    <type>Text</type>
</CustomField>