force-app/main/default/objects/Mapping_Configuration__c/fields/OA_Opinion__c.field-meta.xml
<CustomField>
    <fullName>OA_Opinion__c</fullName>
    <label>OA 处理意见</label>
    <length>255</length>
    <type>Text</type>
</CustomField>