force-app/main/default/objects/Mapping_Configuration__c/fields/OA_Phone__c.field-meta.xml
<CustomField>
    <fullName>OA_Phone__c</fullName>
    <label>OA电话</label>
    <length>225</length>
    <type>Text</type>
</CustomField>