force-app/main/default/objects/Mapping_Configuration__c/fields/OA_Position__c.field-meta.xml
<CustomField>
    <fullName>OA_Position__c</fullName>
    <label>OA岗位</label>
    <length>225</length>
    <type>Text</type>
</CustomField>