force-app/main/default/objects/Mapping_Configuration__c/fields/OA_Purpose_Exhibition__c.field-meta.xml
<CustomField>
    <fullName>OA_Purpose_Exhibition__c</fullName>
    <label>OA参展目的</label>
    <length>225</length>
    <type>Text</type>
</CustomField>