force-app/main/default/objects/Mapping_Configuration__c/fields/OAXH__c.field-meta.xml
<CustomField>
    <fullName>OAXH__c</fullName>
    <label>OAXH</label>
    <length>225</length>
    <type>Text</type>
</CustomField>